# 20GamesChallenge

./: .gitignore
01Pong/: build.sh
01Pong/src/: main.cpp
04Asteroids/: build.sh  build_emscripten.sh  build_emscripten_win.bat  build_linux.sh  build_mingw_i686.bat  build_windows_32bit_debug.bat  build_windows_32bit_release.bat  index.html  windows_32bit_env.bat
04Asteroids-2/: 04Asteroids-2.sln
04Asteroids-2/04Asteroids-2/: 04Asteroids-2.vcxproj  04Asteroids-2.vcxproj.filters  CMakeLists.txt
04Asteroids-2/04Asteroids-2/fonts/: .gitattributes
04Asteroids-2/04Asteroids-2/src/: batch_renderer.cpp  batch_renderer.h  common.h  font.cpp  font.h  game.cpp  game.h  main.cpp  package.cpp  package.h  texture.cpp  texture.h  util.h  window_creation.cpp  window_creation.h
04Asteroids-vs/: 04Asteroids-vs.sln
04Asteroids-vs/04Asteroids-vs/: 04Asteroids-vs.vcxproj  04Asteroids-vs.vcxproj.filters  env.txt  index.html
04Asteroids-vs/04Asteroids-vs/src/: Assets.cpp  Assets.h  Audio.cpp  Audio.h  Font.cpp  Font.h  Game.cpp  Game.h  Items.h  Objects.h  Particles.cpp  Particles.h  Sprite.cpp  Sprite.h  World.cpp  World.h  common.h  ecalloc.h  main.cpp  mathh.h  scripts_bosses.cpp  scripts_common.h  scripts_enemies.cpp  scripts_stages.cpp  stb_sprintf.h  xoshiro256plusplus.h
04Asteroids/src/: Font.cpp  Font.h  Game.cpp  Game.h  Sprite.cpp  Sprite.h  World.cpp  World.h  boss_scripts.h  enemy_scripts.h  main.cpp  mathh.h  misc.h  scripts.h  xoshiro256plusplus.h
